--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.8.0/html2pdf.bundle.min.js"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class=""></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
